<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="382dp"
        android:layout_height="382dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="152.8dp"
            android:layout_height="0dp"
            android:text="@string/textview"
            app:layout_constraintBottom_toTopOf="@+id/button12"
            app:layout_constraintStart_toEndOf="@+id/editTextPhone2"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton5"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/button12"
            android:layout_width="152.8dp"
            android:layout_height="0dp"
            android:text="@string/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/editTextPhone2"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_weight="1" />

        <ToggleButton
            android:id="@+id/toggleButton5"
            android:layout_width="152.8dp"
            android:layout_height="0dp"
            android:text="@string/togglebutton"
            app:layout_constraintBottom_toTopOf="@+id/editTextPhone2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
            app:layout_constraintVertical_weight="1" />

        <Switch
            android:id="@+id/switch5"
            android:layout_width="76.4dp"
            android:layout_height="0dp"
            android:text="TODO"
            app:layout_constraintBottom_toTopOf="@+id/button12"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/toggleButton5" />

        <EditText
            android:id="@+id/editTextPhone2"
            android:layout_width="76.4dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton5"
            app:layout_constraintVertical_weight="2"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="76.4dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/toggleButton5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintVertical_weight="2"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="76.4dp"
            app:layout_constraintBottom_toTopOf="@+id/switch5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/switch5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="TODO"
            android:contentDescription="@string/todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

<!--
            app:layout_constraintVertical_weight="2" />
                    app:layout_constraintDimensionRatio="1:1"


-->